# shingo_program

./: .gitignore  Anchor.toml  LICENSE  README.md
artifacts/: circuits_hash.txt
encrypted-ixs/src/: lib.rs
programs/shingo/: Cargo.toml
programs/shingo/src/: lib.rs
